--- a/src/db/app.json
+++ b/src/db/app.json
@@ -1,1 +1,40 @@
-{}
+{
+    "songs": [
+        {
+            "id": 1,
+            "title": "At The Top",
+            "author": 1,
+            "filename": "At_The_Top_David_Renda.mp3",
+            "categories": ["Powerful", "Mystery"],
+            "ranking": 1,
+            "song": ["<source src=\"./songs/At_The_Top_David_Renda.mp3\" type=\"audio/mpeg\">"]
+        },
+        {
+            "id": 2,
+            "title": "Silly Feet",
+            "author": 1,
+            "filename": "Silly_Feet_David_Renda.mp3",
+            "categories": ["Relax", "Fun"],
+            "ranking": 2,
+            "song": ["<source src=\"./songs/Silly_Feet_David_Renda.mp3\" type=\"audio/mpeg\">"]
+        },
+        {
+            "id": 3,
+            "title": "Western adventures",
+            "author": 2,
+            "filename": "Western_Adventures_-_David_Fesliyan.mp3",
+            "categories": ["Fun", "Western"],
+            "ranking": 4,
+            "song": ["<source src=\"./songs/Western_Adventures_-_David_Fesliyan.mp3\" type=\"audio/mpeg\">"]
+        },
+        {
+            "id": 4,
+            "title": "Bass trap",
+            "author": 3,
+            "filename": "BASS_TRAP_Steve_Oxen.mp3",
+            "categories": ["Powerful", "Insomnia"],
+            "ranking": 3,
+            "song": ["<source src=\"./songs/BASS_TRAP_Steve_Oxen.mp3\" type=\"audio/mpeg\">"]
+        }
+    ]
+}
